k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: rdas-service
  namespace: rdas
spec:
  selector:
    app: rdas
  ports:
    - port: 80
      targetPort: 8080
  type: ClusterIP
