k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: rdas-ingress
  namespace: rdas
spec:
  ingressClassName: nginx
  rules:
    - host: rdas.loop.ncbagroup.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: rdas-service
                port:
                  number: 80
